# Ros2-LLM-Warehouse-sim

./: .gitignore  LICENSE  README.md  test_validator.py
Untitled/: model.sdf
missions/: routes.json
src/mission_executor/: package.xml  setup.py
src/mission_executor/mission_executor/: executor.py  navigation_client.py  route_loader.py
src/mission_executor/test/: test_executor.py
src/mission_interfaces/: CMakeLists.txt  package.xml
src/mission_planner/: package.xml  setup.py
src/mission_planner/mission_planner/: config.py  llm_client.py  models.py  planner_node.py  prompt_builder.py  prompt_template.txt
src/mission_validator/: package.xml  setup.cfg  setup.py
src/mission_validator/mission_validator/: validator.py
src/mission_validator/test/: test_validator.py
src/navigation_client/: package.xml  setup.cfg  setup.py
src/warehouse_sim/: CMakeLists.txt  package.xml
src/warehouse_sim/config/: joystick.yaml  nav2_params.yaml  warehouse_slam.rviz
src/warehouse_sim/launch/: all_in_one.launch.py  joystick_teleop.launch.py  navigation.launch.py  simulation.launch.py
src/warehouse_sim/maps/: my_map.pgm  my_map.yaml
src/warehouse_sim/worlds/: my_world.world
web_interface/: app.py
web_interface/static/: app.js  style.css
web_interface/templates/: index.html
